--- a/examples/example-gateway/services/example-gateway/service-config.json
+++ b/examples/example-gateway/services/example-gateway/service-config.json
@@ -1,7 +1,9 @@
 {
 	"name": "example-gateway",
 	"type": "gateway",
-	"config": {},
+	"config": {
+		"createOptionsPackage": "github.com/uber/zanzibar/examples/example-gateway/services/example-gateway/createoptions"
+	},
 	"dependencies": {
 		"endpoint": [
 			"bar",
