--- a/examples/example-gateway/middlewares/middleware-config.json
+++ b/examples/example-gateway/middlewares/middleware-config.json
@@ -1,11 +1,13 @@
 {
 	"middlewares": [
 		{
+			"clientDependencies": [],
 			"name": "example",
 			"schema": "./middlewares/example/example_schema.json",
 			"importPath": "github.com/uber/zanzibar/examples/example-gateway/middlewares/example"
 		},
 		{
+			"clientDependencies": [],
 			"name": "example_reader",
 			"schema": "./middlewares/example_reader/example_reader_schema.json",
 			"importPath": "github.com/uber/zanzibar/examples/example-gateway/middlewares/example_reader"
